feat: 커뮤니티 테스트