@@ -48,8 +48,15 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	testImplementation 'org.mockito:mockito-inline:5.2.0'
+	testImplementation "org.junit.jupiter:junit-jupiter:5.10.3"
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
 }
